fixed scrollbar not showing in homepage

--- a/src/app/web/src/main/webapp/assets/css/homepage.css
+++ b/src/app/web/src/main/webapp/assets/css/homepage.css
@@ -82,3 +82,8 @@
     top: 0;
     right: 0;
 }
+
+#whiteboard-container {
+    max-height: 450px;
+    overflow-y: auto;
+}
